# slipstick

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  handoff_v2.md
data/: fleet.json
data/agent-workspaces/artifacts/: missile-engagement-1784505102-b9450be043f0.json  missile-engagement-1784505695-b5e3e91221d8.json
data/agent-workspaces/tf-sahara-v0-8-reconstruction-1784497821/: Gabriel-orbital-mechanics-report.md  alpha-strike-results.json  build_sahara_patch.py  design-basis.md  detailed-missile-engagement-report.md  fleet.json  interceptor-summary.json  javelin-flight-summary.json  manifest.json  operations.jsonl  phase-1-report.md  run_lidar_sweep.py  validation.json  (+3 more)
docs/: agent-cli.md
scripts/: check_lidar_tooltips.cjs
setting_reference_files/: Lasers_v3.md  Lasers_v3.md:Zone.Identifier  Missile Table.md  Missiles.md  Politics_Reference_Updated.md  Sensors_and_Fire_Control_v3.md  Sensors_and_Fire_Control_v3.md:Zone.Identifier  Setting_Reference-Compression_Suits_EMPs_EVA.md  Setting_Reference-Industry_and_Manufacturing.md  Setting_Reference_General_Lore.md  Ship Design Research.md  Space_Combat_Reference.md  Systems_Quick_Reference.md  Systems_Quick_Reference.md:Zone.Identifier  TF_Sahara_v0.8.md  missiles_v2.md  missiles_v2.md:Zone.Identifier
src/: agent.rs  combat.rs  default_fleet.json  main.rs  model.rs  physics.rs
src/physics/: lidar_pd.rs  missile_engagement.rs
static/: app.js  index.html  map.js  plot.js  style.css
testdata/: agent_combat_scenario.json  agent_combat_setup.patch.json  lidar_pd_baseline.json  tf_sahara_missile_engagement.json
(+32 files in other folders)
