[package]
name = "slipstick"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2

# The intercept search integrates thousands of candidate trajectories; keep the
# physics optimized even in dev builds (deps stay fast to compile).
[profile.dev.package.slipstick]
opt-level = 2
