[package]
name = "slipstick"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
schemars = { version = "1.2", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = 2

# The intercept search integrates thousands of candidate trajectories; keep the
# physics optimized even in dev builds (deps stay fast to compile).
[profile.dev.package.slipstick]
opt-level = 2
